[gd_scene load_steps=7 format=3 uid="uid://ba5jda23bae7b"]

[ext_resource type="Script" uid="uid://dt225ywj53qip" path="res://mainmenucanvas.gd" id="1_glbon"]
[ext_resource type="PackedScene" uid="uid://c5usa2ubyi1eg" path="res://assets/main_char/character_body_3d.tscn" id="1_jix8l"]
[ext_resource type="PackedScene" uid="uid://cvnv0d5i2r46e" path="res://floor.tscn" id="2_glbon"]
[ext_resource type="PackedScene" uid="uid://dibk5ywal17al" path="res://wall.tscn" id="3_nlkkf"]
[ext_resource type="PackedScene" uid="uid://bfgy30d3drnq2" path="res://ceiling.tscn" id="4_qe12f"]

[sub_resource type="Environment" id="Environment_8qtwp"]
background_mode = 1

[node name="Node3D" type="Node3D"]

[node name="mainmenucanvas" type="CanvasLayer" parent="."]
script = ExtResource("1_glbon")

[node name="Button" type="Button" parent="mainmenucanvas"]
offset_left = 539.0
offset_top = 313.0
offset_right = 624.0
offset_bottom = 344.0
text = "play."
clip_text = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 1.5, -1.1)
fov = 41.315712

[node name="RootNode" parent="." instance=ExtResource("1_jix8l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.599592e-07, 3.7252903e-08, 0.6)
script = null

[node name="Control" parent="RootNode/CanvasLayer" index="0"]
visible = false

[node name="stamina" parent="RootNode/CanvasLayer/Control" index="0"]
visible = false

[node name="Skeleton3D" parent="RootNode/Root Scene/RootNode/CharacterArmature" index="0"]
bones/5/rotation = Quaternion(0.0019118444, 3.578343e-07, 7.9885385e-06, 0.9999982)
bones/7/rotation = Quaternion(-0.02097908, -0.0002755124, 0.000102966056, 0.9997799)
bones/9/rotation = Quaternion(0.672783, -0.40484706, -0.3874561, -0.48305252)
bones/10/rotation = Quaternion(-0.12201948, -0.02943467, -0.18433428, 0.9748158)
bones/13/rotation = Quaternion(-0.04060229, -0.032112323, 0.067119576, 0.99640113)
bones/14/rotation = Quaternion(-0.0789515, 0.0116721755, 0.02505804, 0.9964951)
bones/17/rotation = Quaternion(-0.089859866, 0.025407255, -0.0061301687, 0.9956115)
bones/18/rotation = Quaternion(-0.1202266, 0.006195275, -0.018857487, 0.99254805)
bones/21/rotation = Quaternion(-0.0819329, 0.16051698, -0.03655427, 0.9829472)
bones/22/rotation = Quaternion(-0.11816423, 0.040226366, -0.04146295, 0.99131227)
bones/29/rotation = Quaternion(0.0353859, -0.12386572, 0.085069925, 0.9880123)
bones/30/rotation = Quaternion(-0.09554208, -0.055309076, 0.12600683, 0.9858677)
bones/32/rotation = Quaternion(-0.62493974, -0.30804223, -0.43841955, 0.5677576)
bones/33/rotation = Quaternion(-0.20683867, -0.19363688, 0.32391852, 0.90266246)
bones/52/rotation = Quaternion(0.03253561, 0.12591316, -0.0851805, 0.9878419)
bones/53/rotation = Quaternion(-0.112321705, 0.056076966, -0.12481016, 0.9842061)
bones/54/rotation = Quaternion(-0.5357901, 0.019904297, 0.8359079, -0.11743412)
bones/55/rotation = Quaternion(0.18387038, 0.6827821, -0.18387023, 0.6827826)
bones/56/rotation = Quaternion(0.55531836, 0.124018155, 0.80528057, 0.16662608)
bones/57/rotation = Quaternion(0.16430753, -0.6877519, 0.16430742, 0.6877525)

[node name="Head" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="0"]
transform = Transform3D(0.99998444, -0.0023952557, -0.004997742, -0.005165655, -0.0761193, -0.9970849, 0.0020078425, 0.9970958, -0.07613055, 3.903654e-05, -0.0009313774, 0.0154714715)

[node name="Index4_L" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="1"]
transform = Transform3D(-0.06389068, -0.17911705, 0.9817505, -0.99782085, 0.027678715, -0.0598865, -0.016446766, -0.98343784, -0.18049519, 0.0026405454, -0.000561678, 0.007985746)

[node name="Middle4_L" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="2"]
transform = Transform3D(-0.06822533, -0.26736522, 0.96117634, -0.9971629, -0.012409739, -0.07423154, 0.03177501, -0.9635152, -0.26576027, 0.002676818, -0.00026666935, 0.0078106676)

[node name="Ring4_L" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="3"]
transform = Transform3D(-0.34017214, -0.4035323, 0.8493783, -0.93830454, 0.20537978, -0.27821243, -0.06217747, -0.89161664, -0.44850093, 0.0026186586, 0.00011717317, 0.008003949)

[node name="Pinky4_L" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="4"]
transform = Transform3D(-0.041573834, -0.513061, 0.85734415, -0.99277514, 0.11787492, 0.022399087, -0.11255135, -0.8502196, -0.5142552, 0.002585632, 0.0002757392, 0.0082462495)

[node name="Thumb3_L" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="5"]
transform = Transform3D(-0.13249034, -0.061412126, 0.9892796, -0.9564064, -0.25414145, -0.1438643, 0.2602522, -0.9652149, -0.025063545, 0.0025145106, -0.0010112316, 0.008906481)

[node name="Index4_R" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="6"]
transform = Transform3D(-0.35369352, 0.3283523, -0.8758338, 0.8843952, -0.18746878, -0.42743334, -0.30454054, -0.9257636, -0.22408643, -0.0019102448, -0.0022437305, 0.008307772)

[node name="Middle4_R" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="7"]
transform = Transform3D(-0.35802773, 0.36233678, -0.8605392, 0.91103673, -0.06630759, -0.4069567, -0.20451573, -0.9296852, -0.30636197, -0.0020438144, -0.0019295944, 0.008021741)

[node name="Ring4_R" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="8"]
transform = Transform3D(-0.6044586, 0.43707183, -0.66603136, 0.75699484, 0.054684088, -0.6511275, -0.24816817, -0.8977623, -0.36391515, -0.0021099525, -0.0016258049, 0.008108911)

[node name="Pinky4_R" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="9"]
transform = Transform3D(-0.34386277, 0.5611108, -0.75293595, 0.91562825, 0.022502586, -0.4013941, -0.2082837, -0.82743424, -0.52150655, -0.002156122, -0.0014018319, 0.008289596)

[node name="Thumb3_R" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="10"]
transform = Transform3D(-0.3270509, 0.35917217, -0.87408936, 0.62959534, -0.60696346, -0.4849779, -0.704731, -0.7089354, -0.0276248, -0.0017429406, -0.0024455648, 0.009519082)

[node name="LowerLeg_L" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="11"]
transform = Transform3D(0.60590136, -0.18513276, -0.77368575, 0.79010296, 0.25320977, 0.558201, 0.09256122, -0.94953126, 0.299702, 0.002145817, -0.00014585987, 0.005070083)

[node name="LowerLeg_R" parent="RootNode/Root Scene/RootNode/CharacterArmature/Skeleton3D" index="12"]
transform = Transform3D(0.99323076, 0.0087232785, -0.11560231, 0.11499498, 0.05211554, 0.99199754, 0.014677673, -0.9986028, 0.050760847, -0.00072752987, -0.0027245693, 0.0053208447)

[node name="StaticBody3D" parent="." instance=ExtResource("2_glbon")]
transform = Transform3D(4, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0)

[node name="StaticBody3D2" parent="." instance=ExtResource("3_nlkkf")]
transform = Transform3D(-4, 0, -8.74228e-08, 0, 1, 0, 3.496911e-07, 0, -1.0000002, 4.4703484e-08, 1.5, 2.5)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8qtwp")

[node name="StaticBody3D3" parent="." instance=ExtResource("4_qe12f")]
transform = Transform3D(1.5, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, 2.9, 0.3)

[connection signal="pressed" from="mainmenucanvas/Button" to="mainmenucanvas" method="_on_button_pressed"]

[editable path="RootNode"]
